--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "mongoose": "^5.7.5",
     "morgan": "~1.9.1",
     "pug": "^2.0.4",
-    "readline": "^1.3.0"
+    "react-scripts": "^2.1.8",
+    "readline": "^1.3.0",
+    "request": "^2.88.0"
   }
 }
